--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<router-outlet>
-</router-outlet>
+<app-header></app-header>
+<div class="padded-box">
+  <router-outlet>
+  </router-outlet>
+</div>
