--- a/src/app/components/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie-detail/movie-detail.component.html
@@ -1,1 +1,34 @@
-<p>movie-detail works!</p>
+<div
+  class="movie-container"
+  fxLayout.gt-sm="row"
+  fxLayout.lt-sm="column"
+  fxLayoutAlign.gt-sm="space-around"
+  fxLayoutGap.lt-sm="10px"
+  fxLayoutGap.gt-xs="10px"
+>
+  <div class="picture-container card card-primary">
+    <mat-card>
+      <img [src]="(movie$ | async)?.Poster" alt="" />
+      <h2>{{ (movie$ | async)?.Title }}</h2>
+      <h2>{{ (movie$ | async)?.Year }}</h2>
+    </mat-card>
+  </div>
+  <div class="movie-description">
+    <div class="score-card" fxLayout="row" fxLayoutGap="10px">
+      <div class="score-item" *ngIf="(movie$ | async)?.imdbRating">
+        <img src="../../../assets/icons/IMDB.svg" alt="" />
+        <span class="score">{{ (movie$ | async)?.imdbRating }}</span>
+      </div>
+      <div class="score-item" *ngIf="(movie$ | async)?.Metascore">
+        <img src="../../../assets/icons/Metacritic.svg" alt="" />
+        <span class="score">{{ (movie$ | async)?.Metascore }}</span>
+      </div>
+    </div>
+    <h2>Plot</h2>
+    <span>{{ (movie$ | async)?.Plot }}</span>
+    <h2>Cast</h2>
+    <span>{{ (movie$ | async)?.Actors }}</span>
+  </div>
+</div>
+
+<pre>{{ movie$ | async | json }}</pre>
