--- a/src/app/components/movie-detail/movie-detail.component.scss
+++ b/src/app/components/movie-detail/movie-detail.component.scss
@@ -1,15 +1,5 @@
 :host {
-  .card-picture {
-    width: 23%;
-    margin-bottom: 2%;
-  }
-  .container {
-    min-height: 100%;
-    width: 100%;
-  }
-  .search-form {
-    width: 90%;
-  }
+
   .score-card {
     img {
       height: 50px;
@@ -22,18 +12,25 @@
     .score-item {
       display: flex;
       align-items: center;
-      justify-content: center;
     }
   }
 
   .movie-container {
-    display: flex;
     justify-content: center;
-    align-items: center;
     .picture-container {
       mat-card {
         display: inline-block;
         text-align: center;
+      }
+    }
+    .movie-description {
+      .about {
+        width: 600px;
+
+        .info-table {
+          text-align: left;
+          width: 100%;
+        }
       }
     }
   }
